--- a/vignettes/promises_04_mirai.Rmd
+++ b/vignettes/promises_04_mirai.Rmd
@@ -22,7 +22,7 @@ We've updated this guide to using the `mirai` package from `future` as we believ
 
 1. Faster startup times and much less per-task overhead, meaning you can boost performance by making even shorter tasks async.
 1. More linear scaling, meaning you get the same relative benefits whether running 2 or 200 cores.
-1. Event-driven promises using `mirai` vs. promises using `future` which time-poll every 100 ms. Lower latency and response times can help with the user experience.
+1. Event-driven promises using `mirai` vs. promises using `future`, which time-poll every 100 ms. Lower latency and response times can help with the user experience.
 
 The previous guide using `future` is available [here](promises_05a_futures.html). Using `future` continues to be supported within the Shiny ecosystem, and Henrik Bengtsson‘s excellent work on the futureverse deserves credit for pushing the boundaries of parallelism in R farther than many thought possible.
 
